src/assets/styles/style.css
@import 'react-alice-carousel/lib/alice-carousel.css';
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@font-face {
  font-family: Mija;
  src: url('../fonts/MijaBold.otf') format('opentype'),
    url('../fonts/MijaBold.ttf') format('truetype');
  font-weight: 800;
  font-style: normal;
}

:root {
  font-family: Mija, -apple-system, BlinkMacSystemFont, Roboto, roboto slab,
    droid serif, segoe ui, system-ui, Arial, sans-serif;
  --poppins: 'Poppins', sans-serif;
  line-height: 1.5;
  font-weight: 800;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  --navbar-height: 60px;
  --light: #dadfe2;
  --pop-green: #43d55c;
  --transparent-light: #fefefe;
  --dark: #242424;
  --nav-light: #f1f4f7;
  --footer-dark: #444343;
  --plum: #551b54;
}

body {
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h2 {
  font-size: 2.5em;
  line-height: 1.1;
}

a {
  color: white;
  text-decoration: none;
}

/* Main container  */
.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1.25em;
}

.main > section {
  padding-top: var(--navbar-height);
}

section > h2 {
  line-height: 1.1;
  text-align: center;
}

section {
  max-width: 800px;
}

.page-header {
  display: flex;
  align-items: center;
  text-align: center;
  position: relative;
  gap: 0.5em;
}

.page-header::before,
.page-header::after {
  content: '';
  flex: 1;
  border-bottom: 1px solid #eff2f4;
  margin: 0 10px;
}

hr {
  width: 75%;
  opacity: 0.2;
}

/* Navbar section */
.navbar {
  position: sticky;
  top: 0;
  width: 100%;
  background-color: var(--dark);
  opacity: 0.9;
  z-index: 1000;
}

.navbar-nav {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.link-container {
  display: flex;
}

.nav-item {
  margin: 0.5em;
}

.nav-link {
  text-decoration: none;
  color: rgba(255, 255, 255, 0.87);
  padding: 0.5em 1em;
  transition: background-color 0.3s;
}

.nav-link:hover {
  border-bottom: 2px solid rgba(157, 150, 150, 0.87);
  cursor: pointer;
}

.nav-link.active {
  border-bottom: 2px solid rgba(255, 255, 255, 0.87);
}

.navbar-toggler {
  border: none;
  outline: none;
  display: none;
  border-radius: 3px;
}

.navbar-toggler-icon {
  display: inline-block;
  width: 30px;
  height: 4px;
  position: relative;
}

.navbar-toggler-icon.open {
  background-color: transparent;
}

.navbar-toggler-icon.open::before,
.navbar-toggler-icon.open::after {
  background-color: var(--nav-light);
  top: 0;
}

.navbar-toggler-icon.open::before {
  transform: rotate(45deg);
}

.navbar-toggler-icon.open::after {
  transform: rotate(-45deg);
}

.navbar-toggler-icon,
.navbar-toggler-icon::before,
.navbar-toggler-icon::after {
  transition: all 0.3s ease-in-out;
  background-color: var(--nav-light);
}

.navbar-toggler-icon::before,
.navbar-toggler-icon::after {
  content: '';
  position: absolute;
  left: 0;
  width: 100%;
  height: 4px;
  background-color: var(--nav-light);
}

.navbar-toggler-icon::before {
  top: -10px;
}

.navbar-toggler-icon::after {
  bottom: -10px;
}

/* Light/Dark Toggle Switch */
.theme-switch-wrapper {
  display: flex;
  margin-right: 10px;
}

.theme-switch-wrapper svg {
  margin: 0 10px;
  pointer-events: none;
}

.sun-icon.light-mode {
  left: 0;
  position: absolute;
}

.sun-icon.dark-mode {
  display: none;
}

.moon-icon.light-mode {
  display: none;
}

.moon-icon.dark-mode {
  right: 0;
  position: absolute;
  z-index: 1000;
}

.theme-switch-container {
  display: flex;
  align-items: center;
  position: relative;
}

.theme-switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.theme-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: 0.6s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: '';
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: 0.6s;
  border-radius: 50%;
}

input:checked + .slider {
  background-color: #3b3a3a;
}

input:focus + .slider {
  box-shadow: 0 0 1px #3b3a3a;
}

input:checked + .slider:before {
  transform: translateX(26px);
}

/* Landing */
.landing {
  display: flex;
  justify-content: center;
  height: 100vh;
}

.landing img {
  max-width: 100%;
  height: auto;
  display: block;
  transform: translateY(30px);
}

.landing__header > h1 {
  font-size: 4em;
  font-weight: 900;
  margin-bottom: 0.5em;
}

.landing__header > h2 {
  font-size: 2em;
  font-weight: 900;
}

.landing,
.about {
  gap: 2em;
  padding: 2em 0;
}

.about,
.projects {
  max-width: 600px;
}

.bio-desc {
  font-family: var(--poppins);
  display: flex;
  flex-direction: column;
}

.bio-img {
  display: flex;
  justify-content: center;
}

/* Projects */
.projects {
  width: 100%;
}

.projects,
.resume,
.contact {
  height: 100vh;
}

.project-card {
  margin: 0 auto;
  max-width: 500px;
}

.project-card__img {
  max-width: 500px;
}

.project-card__details-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1;
}

.project-card__header-container {
  display: flex;
  gap: 1em;
  align-items: center;
}

.live,
.github {
  width: 75px;
}

.btn-container {
  display: flex;
  justify-content: center;
  gap: 2em;
}

.title {
  font-size: 1.25em;
  font-weight: 600;
}

.description {
  font-family: var(--poppins);
  font-size: 0.9em;
  font-weight: 400;
  line-height: 1.25;
}

.resume__container {
  max-width: 800px;
}

/* Contact section  */
.contact {
  width: 100%;
  padding: 2em 0;
  max-width: 600px;
}

.contact h2 {
  margin-bottom: 1.5em;
  font-size: 2.5em;
}

.contact form {
  width: 100%;
  max-width: 800px;

  display: flex;
  flex-direction: column;
  gap: 1em;
}

textarea {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem;
  border: 1px solid #ccc;
}

input,
textarea,
button {
  font-family: inherit;
  padding: 0.9em;
  border: none;
  border-radius: 3px;
  font-size: 1em;
  outline: none;
  transition: box-shadow 0.3s, transform 0.3s;
}

input:focus,
textarea:focus {
  box-shadow: 0 0 10px rgba(116, 123, 255, 0.5);
  transform: translateY(-3px);
}

button {
  color: #ffffff;
  background-color: var(--pop-green);
  cursor: pointer;
  border-radius: 3px;
  transform: scale(1);
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}

button:active {
  transform: scale(0.98);
}

button:hover {
  background-color: #2fb345;
}

.top-to-btm {
  position: relative;
}

.icon-position {
  position: fixed;
  bottom: 40px;
  right: 25px;
  z-index: 20;
}

.icon-style {
  background-color: var(--pop-green);
  border: 2px solid #fff;
  border-radius: 50%;
  height: 50px;
  width: 50px;
  color: #fff;
  cursor: pointer;
  animation: movebtn 3s ease-in-out infinite;
  transition: all 0.5s ease-in-out;
}

.icon-style:hover {
  animation: none;
  background: #fff;
  color: var(--pop-green);
  border: 2px solid var(--pop-green);
}

@keyframes movebtn {
  0% {
    transform: translateY(0px);
  }
  25% {
    transform: translateY(20px);
  }
  50% {
    transform: translateY(0px);
  }
  75% {
    transform: translateY(-20px);
  }
  100% {
    transform: translateY(0px);
  }
}

.footer {
  margin-top: 1rem;
  background-color: var(--footer-dark);
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  opacity: 0.7;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2.25em;
}

/* Contact icons in footer */
.footer__link {
  color: #ffffff;
  text-decoration: none;
  font-size: 1.5em;
  transition: transform 0.5s;
}

.footer__link:hover {
  transform: rotate(360deg);
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.react-logo,
.react-logo-light {
  animation: rotate 4s linear infinite;
}

.react-logo,
.font-logo {
  cursor: pointer;
  width: 1em;
  margin: 0 0.5em;
}

/* Dark/Light Themes */
body.dark {
  background-color: var(--dark);
  color: var(--light);
}

body.light {
  background-color: var(--white);
  color: var(--dark);
}

.navbar-light {
  background-color: var(--transparent-light);
  color: var(--dark);
}

.nav-link-light {
  color: var(--dark);
}

.nav-link-light:hover {
  border-bottom: 2px solid rgba(59, 58, 58, 0.87);
}

.nav-link-light.active {
  border-bottom: 2px solid rgba(38, 38, 38, 0.87);
}

.page-header-dark::before,
.page-header-dark::after {
  border-bottom: 1px solid #eff2f4;
}

.page-header-light::before,
.page-header-light::after {
  border-bottom: 1px solid black;
}

.resume__img--light {
  width: 100%;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.resume__img--dark {
  width: 100%;
}

.contact__input--light {
  background-color: var(--light);
  color: black;
}

.react-logo,
.font-logo {
  cursor: pointer;
  width: 1em;
  margin: 0 0.5em;
}

.react-logo-light,
.font-logo-light {
  color: var(--light);
  cursor: pointer;
  width: 1em;
  margin: 0 0.5em;
}

/* Media Queries */
@media (max-width: 500px) {
  .project-card {
    flex-direction: column;
  }

  .project-card__img {
    width: 100%;
  }

  .landing {
    display: block;
    padding-top: 0;
    padding: 0;
  }

  p {
    font-size: 1.1em;
  }
}

@media (max-width: 768px) {
  .navbar-toggler {
    display: block;
  }

  .navbar-collapse {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
    opacity: 0;
  }

  .navbar-collapse.show {
    display: block;
    max-height: 500px;
    opacity: 1;
  }

  .navbar-nav,
  .link-container {
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
  }

  .nav-link {
    text-align: center;
  }

  .theme-switch-wrapper {
    margin-left: 1em;
  }

  .landing {
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
  }

  .about {
    flex-direction: column;
  }

  .about > div {
    max-width: 80%;
    margin: 0 auto;
  }

  .about h2,
  .about p {
    max-width: 100%;
    text-align: left;
  }

  .about > div:first-child {
    padding-right: 0;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
}

